--- a/PetAdoption-iOS/PetAdoption-iOS/Storyboards/PetListings.storyboard
+++ b/PetAdoption-iOS/PetAdoption-iOS/Storyboards/PetListings.storyboard
@@ -108,12 +108,24 @@
                                     </connections>
                                 </collectionReusableView>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Results Found" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i3c-tL-6Wu">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="667" id="ync-FK-AtJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="AZn-wT-4hd" firstAttribute="leading" secondItem="L9f-SW-fav" secondAttribute="leading" id="4qh-uQ-h4L"/>
                             <constraint firstAttribute="bottom" secondItem="AZn-wT-4hd" secondAttribute="bottom" id="Bo6-AV-Th1"/>
+                            <constraint firstItem="i3c-tL-6Wu" firstAttribute="leading" secondItem="L9f-SW-fav" secondAttribute="leading" id="IJl-qu-Z3Z"/>
                             <constraint firstItem="AZn-wT-4hd" firstAttribute="top" secondItem="L9f-SW-fav" secondAttribute="top" id="fJ7-a5-ZZH"/>
+                            <constraint firstItem="i3c-tL-6Wu" firstAttribute="centerY" secondItem="L9f-SW-fav" secondAttribute="centerY" id="tFJ-Kt-98R"/>
+                            <constraint firstAttribute="trailing" secondItem="i3c-tL-6Wu" secondAttribute="trailing" id="uaE-Xz-bnp"/>
                             <constraint firstAttribute="trailing" secondItem="AZn-wT-4hd" secondAttribute="trailing" id="ydT-8C-VFI"/>
                         </constraints>
                     </view>
@@ -137,7 +149,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="885-vW-cGv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1193" y="-539"/>
+            <point key="canvasLocation" x="1192.8" y="-539.28035982008998"/>
         </scene>
         <!--Filter-->
         <scene sceneID="twx-dZ-9gJ">
